--- a/athens.html
+++ b/athens.html
@@ -74,9 +74,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="after-banner-text" data-aos="fade-left">
-                        <p class="subheading-text">
+                        <h6>
                             Διαμονή στο κέντρο της ιστορίας, του φαγητού και της τοπικής ζωής
-                        </p>
+                        </h6>
                         <p>
                             Η Αθήνα συνδυάζει αρχαία μνημεία με σύγχρονη ενέργεια. Στο Zeuzie προτείνουμε αληθινές
                             επιλογές διαμονής που διευκολύνουν την εξερεύνηση — κοντά στα μέσα μεταφοράς, δίπλα σε
@@ -307,7 +307,7 @@
                     <p>
                         Το NLH Fix βρίσκεται κοντά στον σταθμό μετρό Fix, σε μία από τις πιο αυθεντικές περιοχές της
                         πόλης. Προσφέρει καθαρό design, φιλική εξυπηρέτηση και εύκολη πρόσβαση στα μουσεία και στο
-                        κέντρο
+                        κέντρο.
                     </p>
                 </div>
             </div>
@@ -369,10 +369,10 @@
                         </div>
                         <div class="why-choose-text">
                             <h2>
-                                Μόνο για την Ελλάδα
+                                Επιλεγμένα Καταλύματα
                             </h2>
                             <p>
-                                Όλα τα ξενοδοχεία βρίσκονται αποκλειστικά στην Ελλάδα. Χωρίς άσχετες επιλογές.
+                                Λίστες που θα επιλέγαμε κι εμείς οι ίδιοι.
                             </p>
                         </div>
                     </div>
@@ -388,10 +388,10 @@
                         </div>
                         <div class="why-choose-text">
                             <h2>
-                                Επαληθευμένα Αστικά Ξενοδοχεία
+                                Αναζήτηση ανά Περιοχή
                             </h2>
                             <p>
-                                Περιλαμβάνουμε μόνο καταλύματα με σταθερές, καλές κριτικές.
+                                Περιηγηθείτε γρήγορα ανά γειτονιά ή αξιοθέατο.
                             </p>
                         </div>
                     </div>
@@ -407,10 +407,10 @@
                         </div>
                         <div class="why-choose-text">
                             <h2>
-                                Αναζήτηση ανά Πόλη ή Περιοχή
+                                Εστιασμένο στον Επισκέπτη
                             </h2>
                             <p>
-                                Περιηγηθείτε εύκολα ανά γειτονιά, αξιοθέατο ή σημείο αναφοράς.
+                                Για σύντομες διαμονές, οικογένειες ή επαγγελματίες.
                             </p>
                         </div>
                     </div>
