--- a/home-blogpost.html
+++ b/home-blogpost.html
@@ -201,15 +201,13 @@
                                 </h5>
                                 <ul>
                                     <li>
-                                        <strong>Κρήτη – The Crete Golf Club: </strong> Το πιο εξελιγμένο γήπεδο 18 οπών στο νησί
+                                        <strong>Κρήτη – The Crete Golf Club: </strong>Το πιο εξελιγμένο γήπεδο 18 οπών στο νησί
                                     </li>
                                     <li>
-                                        <strong>Κρήτη – </strong>Βίλες με μεγάλους εξωτερικούς χώρους και τοπικό
-                                        χαρακτήρα
+                                        <strong>Κέρκυρα – Corfu Golf Club:</strong> Ιστορικό γήπεδο με πλούσιο φυσικό περιβάλλον
                                     </li>
                                     <li>
-                                        <strong>Κέρκυρα & Παξοί –</strong> Νεοκλασικές επαύλεις και beachfront
-                                        καταλύματα
+                                        <strong>Κόστα Ναβαρίνο (Πελοπόννησος):</strong>Αν και όχι νησί, προσφέρει premium εμπειρία με θέα στο Ιόνιο
                                     </li>
                                 </ul>
                                 <h5>
