--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                         </div>
                         <form class="newsletter_form">
                             <div class="newsletter_formWrap">
-                                <input type="email" class="newsletter_input" placeholder="Εγγραφή στο">
-                                <input type="submit" class="btn" value="φόρμα εγγραφής εδώ">
+                                <input type="email" class="newsletter_input" placeholder="εισάγετε το email σας">
+                                <input type="submit" class="btn" value="συνεισφέρω">
                             </div>
                         </form>
                     </div>
