--- a/athens.html
+++ b/athens.html
@@ -568,7 +568,7 @@
 
                 <!-- 01 -->
                 <div class="listing" data-aos="fade-up-right">
-                    <a href="blog-posts.html">
+                    <a href="blog-posts">
                         <div class="read-more-main">
                             <div class="read-more-img"
                                 style="background-image: url(assets/images/roftop-bar-hotel-img.jpg);"></div>
@@ -579,7 +579,7 @@
 
                 <!-- 02 -->
                 <div class="listing" data-aos="fade-up">
-                    <a href="blog-posts.html">
+                    <a href="blog-posts">
                         <div class="read-more-main">
                             <div class="read-more-img" style="background-image: url(assets/images/roftop-img2.jpg);">
                             </div>
@@ -590,7 +590,7 @@
 
                 <!-- 03 -->
                 <div class="listing" data-aos="fade-up-left">
-                    <a href="blog-posts.html">
+                    <a href="blog-posts">
                         <div class="read-more-main">
                             <div class="read-more-img" style="background-image: url(assets/images/roftop-img3.jpg);">
                             </div>
