--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -48,7 +48,7 @@
 
 
     <!-- Banner Section Start -->
-    <div class="high-stakes-banner" style="background:url(assets/images/contact-us-banner.jpg);">
+    <div class="high-stakes-banner" style="background:url(assets/images/get-in-touch-banner.jpeg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="after-banner-img" style="background-image: url(assets/images/after-banner.jpg);"></div>
+                    <div class="after-banner-img" style="background-image: url(assets/images/6990.jpg);"></div>
                 </div>
                 <div class="col-md-6">
                     <div class="after-banner-text">
