--- a/patras-blogpage.html
+++ b/patras-blogpage.html
@@ -149,7 +149,7 @@
                                         <strong>Astir Hotel –</strong> Απέναντι σχεδόν από το terminal, με rooftop για ηρεμία πριν το ταξίδι
                                     </li>
                                     <li>
-                                        <strong>Airotel Patras Smart –</strong> Πέντε λεπτά με τα πόδια, ιδανικό για ταξιδιώτες με χειραποσκευέςC
+                                        <strong>Airotel Patras Smart –</strong> Πέντε λεπτά με τα πόδια, ιδανικό για ταξιδιώτες με χειραποσκευές
                                     </li>
                                     <li>
                                         <strong>Olympic Star –</strong> Οικονομική και άμεση επιλογή, ειδικά για μονοήμερη στάση
