--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -319,7 +319,7 @@
 
                 <div class="personal-page-content">
                     <h2>
-                        10. Επικοινωνία
+                     Επικοινωνία
                     </h2>
                     <p>
                         Για οποιοδήποτε θέμα σχετικό με την προστασία δεδομένων, μπορείτε να επικοινωνήσετε στο:
