--- a/relatively.html
+++ b/relatively.html
@@ -49,7 +49,7 @@
 
 
     <!-- Banner Section Start -->
-    <div class="high-stakes-banner" style="background:url(assets/images/relative-img.jpg);">
+    <div class="high-stakes-banner" style="background:url(assets/images/relavility-banner.webp);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
