--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -223,7 +223,7 @@
                     </div>
     
                     <div class="personal-page-content">
-                        <h2>9. Επικοινωνία</h2>
+                        <h2> Επικοινωνία</h2>
                         <p>
                             Για ερωτήσεις ή απορίες σχετικά με τους Όρους Χρήσης, μπορείτε να επικοινωνήσετε μαζί μας:
                         </p>
