--- a/thessaloniki-blogpost.html
+++ b/thessaloniki-blogpost.html
@@ -75,7 +75,7 @@
                     <div class="blogpost-inner">
                         <div class="home-blog-img">
                             <div class="blog-post-image"
-                                style="background-image: url(assets/images/the-best-hotels-with-parking.jpg);"></div>
+                                style="background-image: url(assets/images/the-best-rooftop-bar.jpg);"></div>
                         </div>
                         <div class="blogpost-text">
                             <h3>
@@ -124,7 +124,7 @@
                     <div class="blogpost-inner">
                         <div class="home-blog-img">
                             <div class="blog-post-image"
-                                style="background-image: url(assets/images/where-to-stay-before.jpg);"></div>
+                                style="background-image: url(assets/images/romantic-weekend-city.jpg);"></div>
                         </div>
                         <div class="blogpost-text">
                             <h3>
@@ -174,11 +174,11 @@
                     <div class="blogpost-inner">
                         <div class="home-blog-img">
                             <div class="blog-post-image"
-                                style="background-image: url(assets/images/the-old-town-of-patra-boutique.jpg);"></div>
+                                style="background-image: url(assets/images/thessaloniki-for-foodies.jpg);"></div>
                         </div>
                         <div class="blogpost-text">
                             <h3>
-                                Η Θεσσαλονίκη για Καλοφαγάδες: Ξενοδοχεία Κοντά σε Αυθεντικές 
+                                Η Θεσσαλονίκη για Καλοφαγάδες: Ξενοδοχεία Κοντά σε Αυθεντικές Ταβέρνες
                             </h3>
                             <p>
                                 Η πόλη είναι παράδεισος για τους λάτρεις του φαγητού. Αν έρχεστε για τις γεύσεις, τότε φροντίστε να μείνετε κοντά στα σωστά σημεία.
