--- a/athens-blogpost.html
+++ b/athens-blogpost.html
@@ -92,8 +92,7 @@
                                 </h5>
                                 <ul>
                                     <li>
-                                        <strong>Πού να Πιείτε το Ποτό σας με Θέα</strong> Θέα 360 μοιρών στην Ακρόπολη,
-                                        μοντέρνο design
+                                        <strong>360 Cocktail Bar – Monastiraki:</strong> Θέα 360 μοιρών στην Ακρόπολη, μοντέρνο design
                                     </li>
                                     <li>
                                         <strong>The Zillers Roof Garden – Μητροπόλεως:</strong>Ήρεμο και κομψό πάνω από
