--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <!-- banner Section start-->
     <section class="hero-bnr hero-bg  main-scroll">
         <div class="hero-bnr-inner">
+            <div class="container"></div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="container">
                         <div class="hero-text"  data-aos="fade-up">
                             <h1>
                                 Ξενοδοχεία σε Αθήνα, Θεσσαλονίκη και Πάτρα
