--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                         <li class="nav-item"><a href="thessaloniki">Θεσσαλονίκη</a></li>
                         <li class="nav-item"><a href="patras">Πάτρα</a></li>
                         <li class="nav-item"><a href="blog-posts">Αναρτήσεις Blog</a></li>
-                        <li class="nav-item"><a href="get-in-touch" class="active">Επικοινωνήστε</a></li>
+                        <li class="nav-item"><a href="contact" class="active">Επικοινωνήστε</a></li>
                         <li class="nav-item"><a href="relatively">Σχετικά</a></li>
 
                     </ul>
