--- a/relatively.html
+++ b/relatively.html
@@ -37,7 +37,7 @@
                         <li class="nav-item"><a href="thessaloniki">Θεσσαλονίκη</a></li>
                         <li class="nav-item"><a href="patras">Πάτρα</a></li>
                         <li class="nav-item"><a href="blog-posts">Αναρτήσεις Blog</a></li>
-                        <li class="nav-item"><a href="get-in-touch">Επικοινωνήστε</a></li>
+                        <li class="nav-item"><a href="contact">Επικοινωνήστε</a></li>
                         <li class="nav-item"><a href="relatively" class="active">Σχετικά</a></li>
 
                     </ul>
@@ -67,7 +67,7 @@
 
 
  <!- after-banner section start -->
-    <div class="after-banner pt-80 mb-40">
+    <div class="after-banner pt-80 mb-40  main-scroll">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
