--- a/patras.html
+++ b/patras.html
@@ -37,7 +37,7 @@
                         <li class="nav-item"><a href="thessaloniki">Θεσσαλονίκη</a></li>
                         <li class="nav-item"><a href="patras" class="active">Πάτρα</a></li>
                         <li class="nav-item"><a href="blog-posts">Αναρτήσεις Blog</a></li>
-                        <li class="nav-item"><a href="get-in-touch">Επικοινωνήστε</a></li>
+                        <li class="nav-item"><a href="contact">Επικοινωνήστε</a></li>
                         <li class="nav-item"><a href="relatively">Σχετικά</a></li>
 
                     </ul>
