--- a/athens.html
+++ b/athens.html
@@ -125,6 +125,9 @@
                         στυλ και πρόσβαση στην καρδιά της πόλης.
                     </p>
 
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -148,6 +151,9 @@
                         Ακριβώς απέναντι από τον Ιερό Βράχο, αυτό το μικρό ξενοδοχείο προσφέρει ηρεμία, καθαρές γραμμές
                         και εστιατόριο στην ταράτσα. Ιδανική επιλογή για περιηγήσεις στο ιστορικό τρίγωνο με τα πόδια.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084"
@@ -186,6 +192,9 @@
                         οικογένειες ή επισκέπτες μεγαλύτερης διάρκειας. Βρίσκεται σε απόσταση περιπάτου από την Ακρόπολη
                         και τα κύρια σημεία ενδιαφέροντος.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -210,6 +219,9 @@
                         Ένα ξενοδοχείο αφιερωμένο στην ανάπαυση. Με φυσικά υλικά COCO-MAT και πισίνα με θέα στον
                         Παρθενώνα, αποτελεί ήρεμη βάση για εξερεύνηση ή επαγγελματικά ταξίδια.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324"
@@ -247,6 +259,9 @@
                         Πρώην αποθήκη, σήμερα design-forward κατάλυμα στην καρδιά της δημιουργικής Αθήνας. Άνετα και
                         καθαρά δωμάτια, κοντά σε γκαλερί, street food και ζωντανή πόλη.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -271,6 +286,9 @@
                         Κλασική πρόταση για όσους θέλουν σταθερή ποιότητα, άμεση πρόσβαση σε μουσεία και μετρό, και
                         καθαρά, ήσυχα δωμάτια. Μόλις λίγα μέτρα από τον πεζόδρομο Διονυσίου Αρεοπαγίτου.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324"
@@ -309,6 +327,9 @@
                         πόλης. Προσφέρει καθαρό design, φιλική εξυπηρέτηση και εύκολη πρόσβαση στα μουσεία και στο
                         κέντρο.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -334,6 +355,9 @@
                         χωρίς υπερβολές. Η ταράτσα με πισίνα και το εστιατόριο ξεχωρίζουν, ενώ η πρόσβαση στα ψώνια και
                         στα αξιοθέατα είναι άμεση.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187"
