--- a/patras.html
+++ b/patras.html
@@ -120,7 +120,9 @@
                     <p>
                         Ένα μικρό design ξενοδοχείο σε αναπαλαιωμένο νεοκλασικό κτήριο. Με προσεγμένα δωμάτια και ήσυχη τοποθεσία, είναι ιδανικό για ταξιδιώτες που αναζητούν κάτι ξεχωριστό και αυθεντικό.
                     </p>
-
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -142,6 +144,9 @@
                     <p>
                         Καθαρό, λειτουργικό και πρακτικό. Το Airotel Patras Smart βρίσκεται λίγα λεπτά από το λιμάνι και είναι ιδανικό για ταξιδιώτες σε διέλευση ή επαγγελματικά ραντεβού.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main"  data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471"  target="_blank">
@@ -173,6 +178,9 @@
                     <p>
                         Ένα ξενοδοχείο με χαρακτήρα και διακριτική πολυτέλεια στο εμπορικό κέντρο της Πάτρας. Διαθέτει άνετα δωμάτια και φιλική ατμόσφαιρα με ιδιαίτερο στιλ.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -195,6 +203,9 @@
                     <p>
                         Μια καλή επιλογή για digital nomads ή ζευγάρια. Το City Loft προσφέρει την αίσθηση διαμερίσματος με την ασφάλεια και την υποστήριξη ενός ξενοδοχείου.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main"  data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155"  target="_blank">
@@ -226,6 +237,9 @@
                     <p>
                         Λίγο έξω από το κέντρο της Πάτρας, προσφέρει θέα στον Πατραϊκό κόλπο και resort παροχές. Ιδανικό για καλοκαιρινές διακοπές ή διαμονή με αυτοκίνητο.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -248,6 +262,9 @@
                     <p>
                         Γνωστό και σταθερό ξενοδοχείο για δεκαετίες. Λίγο παλαιό σε στυλ, αλλά με τα βασικά που χρειάζονται οι ταξιδιώτες και εκπληκτική θέα από την ταράτσα.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main"  data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691"  target="_blank">
@@ -279,6 +296,9 @@
                     <p>
                         Ακριβώς απέναντι από το λιμάνι και κοντά στον πεζόδρομο της Αγίου Νικολάου, είναι μία από τις πιο γνωστές επιλογές της πόλης για επαγγελματικά ταξίδια και σύντομες διαμονές.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -301,6 +321,9 @@
                     <p>
                         Καθαρό, απλό και καλά τοποθετημένο για ταξιδιώτες που θέλουν κάτι λειτουργικό και προσιτό για 1–2 βραδιές στο κέντρο της Πάτρας.
                     </p>
+                    <div class="explore-button1">
+                        <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457" class="unique-button1">προβολή ξενοδοχείου</a>
+                    </div>
                 </div>
                 <div class="top-hotel-main" data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457" target="_blank">
