--- a/thessaloniki.html
+++ b/thessaloniki.html
@@ -118,7 +118,9 @@
                 <p>
                     Σε κτήριο του 1920, κοντά στην εμπορική καρδιά της πόλης, το Modernist συνδυάζει minimal αισθητική με λειτουργικότητα. Τα δωμάτια είναι μικρά αλλά προσεγμένα, και η τοποθεσία ιδανική για περπάτημα προς τη θάλασσα και τα μπαρ του Λαδάδικου.
                 </p>
-
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
         </div>
     </div>
@@ -140,6 +142,9 @@
                 <p>
                     Ένα από τα πιο αναγνωρίσιμα ξενοδοχεία της πόλης, με θέα στο Θερμαϊκό και κορυφαία τοποθεσία. Μεγάλα δωμάτια, επαγγελματικό προσωπικό και άμεση πρόσβαση σε εμπορικά και πολιτιστικά σημεία.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
             <div class="top-hotel-main" data-aos="fade-left">
                 <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803"  target="_blank">
@@ -171,6 +176,9 @@
                 <p>
                     Ένα πολύχρωμο, μοντέρνο ξενοδοχείο με ανεπιτήδευτο χαρακτήρα και προσοχή στις λεπτομέρειες. Ταιριάζει σε νεότερους ταξιδιώτες ή ζευγάρια που θέλουν ατμόσφαιρα και λειτουργικότητα μαζί.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
         </div>
     </div>
@@ -193,6 +201,9 @@
                 <p>
                     Δίπλα στην παραλιακή, με ιστορικό όνομα και σύγχρονες ανέσεις. Ιδανικό για συνέδρια, δεξιώσεις ή πολυτελείς αποδράσεις με έμφαση στην άνεση και την τοποθεσία.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
             <div class="top-hotel-main"  data-aos="fade-left">
                 <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403"  target="_blank">
@@ -224,6 +235,9 @@
                 <p>
                     Λίγο έξω από το κέντρο, στην περιοχή του λιμανιού, το Met προσφέρει ησυχία, τέχνη και αίσθηση ευρυχωρίας. Η ταράτσα του ξεχωρίζει, όπως και ο χαρακτήρας του — ιδανικό για επαγγελματίες ή μεγαλύτερες διαμονές.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
         </div>
     </div>
@@ -246,11 +260,15 @@
                 <p>
                     Ένα από τα μεγαλύτερα ξενοδοχεία της πόλης. Χωρίς περιττές υπερβολές, αλλά με συνέπεια, καθαριότητα και σταθερή ποιότητα σε πολύ καλή τοποθεσία.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
             <div class="top-hotel-main"  data-aos="fade-left">
                 <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372" target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel6.jpg);"></div>
                 </a>
+               
             </div>
         </div>
     </div>
@@ -277,6 +295,9 @@
                 <p>
                     Ένα προσεγμένο, φιλόξενο ξενοδοχείο σε ήσυχο σημείο κοντά στη Μοδιάνο. Καθαρά δωμάτια, φιλικό προσωπικό και αίσθηση άνεσης με σωστή τιμολόγηση.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
         </div>
     </div>
@@ -299,6 +320,9 @@
                 <p>
                     Το ONOMA φέρνει διαφορετική φιλοσοφία: εφαρμογές, χρώμα, θεματικά events και εμπειρίες σχεδιασμένες για σύγχρονους ταξιδιώτες. Μια εναλλακτική πρόταση με urban χαρακτήρα.
                 </p>
+                <div class="explore-button1">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092" class="unique-button1">προβολή ξενοδοχείου</a>
+                </div>
             </div>
             <div class="top-hotel-main"  data-aos="fade-left">
                 <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092"  target="_blank">
